# generated by datamodel-codegen:
#   filename:  water_stn.json
#   timestamp: 2025-11-14T04:22:10+00:00
# datamodel-codegen --input water_stn.json --input-file-type json --output esri_fc.py

from __future__ import annotations  # Support Python <3.11
from typing import List, Optional
from pydantic import BaseModel

class FieldAliases(BaseModel):
    OBJECTID: str
    Station_Number: str
    Station_Name: str
    Province: str
    Water_Flow: str
    Sampling_Frequency: str
    Drainage_Area_sq_km: str
    Station_Water_Quantity: str
    Symbol: str
    Year: str
    Latitude: str
    Longitude: str
    Historical_Water_Quantity_Data: str
    Realtime_Water_Quantity_Data: str
    Drainage_Region_ID: str
    Drainage_Region_Water_Quantity: str
    Data_Access_Page: str


class SpatialReference(BaseModel):
    wkid: int
    latestWkid: int


class Field(BaseModel):
    name: str
    type: str
    alias: str
    length: Optional[int] = None


class Attributes(BaseModel):
    OBJECTID: int
    Station_Number: str
    Station_Name: str
    Province: Optional[str]
    Water_Flow: str
    Sampling_Frequency: str
    Drainage_Area_sq_km: str
    Station_Water_Quantity: str
    Symbol: str
    Year: str
    Latitude: str
    Longitude: str
    Historical_Water_Quantity_Data: str
    Realtime_Water_Quantity_Data: str
    Drainage_Region_ID: str
    Drainage_Region_Water_Quantity: str
    Data_Access_Page: str


class Geometry(BaseModel):
    x: float
    y: float


class Feature(BaseModel):
    attributes: Attributes
    geometry: Geometry


class Model(BaseModel):
    displayFieldName: str
    fieldAliases: FieldAliases
    geometryType: str
    spatialReference: SpatialReference
    fields: List[Field]
    features: List[Feature]
